k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/library-mern-api: "true"
        io.kompose.service: client
    spec:
      containers:
        - image: client
          name: library-mern-frontend
          resources: {}
          volumeMounts:
            - mountPath: /app/node_modules
              name: client-claim0
            - mountPath: /app
              name: client-claim1
      restartPolicy: Always
      volumes:
        - name: client-claim0
          persistentVolumeClaim:
            claimName: client-claim0
        - name: client-claim1
          persistentVolumeClaim:
            claimName: client-claim1
status: {}
