k8s/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo-express
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo-express
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/library-mern-api: "true"
        io.kompose.service: mongo-express
    spec:
      containers:
        - env:
            - name: ME_CONFIG_BASICAUTH_PASSWORD
              value: admin123456
            - name: ME_CONFIG_BASICAUTH_USERNAME
              value: admin
            - name: ME_CONFIG_MONGODB_ADMINPASSWORD
            - name: ME_CONFIG_MONGODB_ADMINUSERNAME
            - name: ME_CONFIG_MONGODB_SERVER
              value: mongodb
          image: mongo-express
          name: mongo-express
          ports:
            - containerPort: 8081
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-data
      restartPolicy: Always
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-data
status: {}
